# zen-mcp-server

./: .env.example  README.md  config.py  http_server.py  http_transport.py  pyproject.toml  requirements.txt  run-server.sh  run_integration_tests.sh  server.py  simulator_test_optimization_plan.md
docs/tools/: research.md
providers/: __init__.py  base.py  custom.py  gemini.py  groq.py  moonshot.py  openai_compatible.py  openai_provider.py  perplexity_provider.py  registry.py  xai.py
refactor/: design.md  requirements.md  task.md
research_exports/: research_2025-08-10_03-35-22_VCRpy_best_practices_for_test_optimization_Python.md  research_2025-08-10_03-35-46_pytest-xdist_parallel_test_execution_best_practice.md  research_2025-08-10_03-37-20_pytest_test_suite_optimization_strategies_three-ti.md  research_2025-08-10_03-50-41_respx_httpx_async_testing_best_practices_Python_re.md  research_2025-08-10_04-00-26_pytest-xdist_group_tests_on_same_worker_xdist_grou.md
simulator_tests/: __init__.py  test_basic_conversation.py  test_content_validation.py  test_debug_certain_confidence.py  test_line_number_validation.py  test_model_thinking_config.py  test_moonshot_models.py  test_ollama_custom_url.py  test_openrouter_fallback.py  test_openrouter_models.py  test_per_tool_deduplication.py  test_planner_continuation_history.py  test_planner_validation.py  test_secaudit_validation.py  test_thinkdeep_validation.py  test_vertex_ai_models.py  test_xai_models.py
systemprompts/: research_prompt.py
tests/: test_chatgpt_auth.py  test_chatgpt_functional.py  test_chatgpt_integration.py  test_gpt5_temperature_fix.py  test_groq_provider.py  test_model_restrictions.py  test_moonshot_provider.py  test_perplexity_provider.py  test_research.py  test_uv_setup_script.py  test_vertex_ai_provider.py  test_workflow_utf8.py  test_xai_provider.py
tools/: __init__.py  chat.py  listmodels.py  research.py  thinkdeep.py
tools/shared/: base_tool.py
tools/workflow/: workflow_mixin.py
utils/: chatgpt_auth.py  model_context.py  model_restrictions.py
